# SenseisUpdater

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
scripts/: build_exe.ps1  run_sensei_updater.bat
src/: last-run.json
src/sensei_updater/: __init__.py  __main__.py  app.py  main.py
src/sensei_updater/core/: __init__.py  admin.py  colors.py  console.py  powershell.py  process.py  spinner.py
src/sensei_updater/data/: paths.py
src/sensei_updater/domain/: __init__.py  config.py  reports.py
src/sensei_updater/services/: __init__.py  apps.py  apps_service.py  diagnostics.py  drivers.py  drivers_service.py  scheduler.py  system.py
src/sensei_updater/ui/: __init__,py  __init__.py  async_utils.py  main_window.py  menu.py  selector.py  styles.qss  tui.py  widgets.py
src/sensei_updater/ui/pages/: __init__.py  apps_page.py  cycle_page.py  drivers_page.py  reports_page.py  schedule_page.py  settings_page.py
