[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensei-updater"
version = "1.2.0"
description = "Safe Windows driver and software updater with profiles, reports, and diagnostics."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
sensei-updater = "sensei_updater.main:main"

[tool.setuptools.packages.find]
where = ["src"]